--- a/mini project/index.html
+++ b/mini project/index.html
@@ -12,7 +12,7 @@
         <form id="registerForm">
             <input type="email" id="floatingEmail" placeholder="Email" required><br>
             <input type="password" id="floatingPassword" placeholder="Password" required><br>
-            <button id="submit" type="submit">Register</button>
+            <button id="submit" type="submit">index</button>
         </form>
     </div>
 
